--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@auth/supabase-adapter": "^1.10.0",
     "@hcaptcha/react-hcaptcha": "^1.12.0",
     "@heroicons/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@supabase/supabase-js": "^2.51.0",
     "@tailwindcss/forms": "^0.5.10",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "next": "15.4.0-canary.123",
     "next-auth": "5.0.0-beta.29",
@@ -22,6 +24,7 @@
     "postgres": "^3.4.6",
     "react": "latest",
     "react-dom": "latest",
+    "react-redux": "^9.2.0",
     "tailwindcss": "3.4.17",
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
